@@ -4,7 +4,8 @@
 • Add alphabetical grouping of All Apps for grid views.
 • Plasma Layout: use new style for active buttons.
 • GNOME Menu Layout: add search.
-• Fix unexport() calls on dbus object that hasn't been exported
+• Fix unexport() calls on dbus object that hasn't been exported.
+• Fix scrollbars jumping back to previously selected menu item.
 • MenuButton: fix issue with hiding Dash to Panel when intellihide is enabled.
 • Add more options for Override Menu Locations.
 • Settings: add new Donate Page.
